--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <!-- NO google.script.run here - this is for GitHub Pages -->
     <script>
         // Replace with your Google Apps Script Web App URL
-        const SCRIPT_URL = 'YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL';
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzG-wdzw_9p2gmpwwnFiR-G62t7aufYS_BdQolDuXZv4IcAeN7E0G6anEHE_9gMRnU/exec';
 
         let selectedFile = null;
         let selectedImage = null;
@@ -466,3 +466,4 @@
     </script>
 </body>
 </html>
+
